@@ -1,12 +1,17 @@
-#Sun Sep  2 16:38:48 2007
+#Thu Sep 13 09:11:22 2007
+setstate EGRollWzRe on
+setstate EGRollWzRe 2007-09-13 09:10:33 state on
+setstate EGRollWzReSteuerung active
+setstate EGTuerWz1 on
+setstate EGTuerWz1 2007-09-13 09:10:33 state on
 setstate FHZ fhtbuf: 1c
 setstate FHZ 2006-02-12 14:03:39 fhtbuf 23
 setstate FHZ 2006-03-26 08:47:36 init2 deadbeefdeadbe
 setstate FHZ 2006-03-26 08:47:36 serial deadbeef
 setstate btn4 on
 setstate btn4 2007-05-17 16:58:46 state on
-setstate cellar on-for-timer 2
-setstate cellar 2007-04-22 14:04:12 state on-for-timer 2
+setstate cellar on
+setstate cellar 2007-09-13 09:10:33 state on
 setstate fl measured-temp: 21.6 (Celsius)
 setstate fl 2006-03-29 23:02:30 actuator 00%
 setstate fl 2006-03-26 08:50:54 day-temp 21.5 (Celsius)
@@ -69,10 +74,10 @@ setstate wz 2006-03-26 08:50:36 wed-from1 06:00
 setstate wz 2006-03-26 08:50:36 wed-to1 23:00
 setstate wz 2006-03-26 08:52:31 windowopen-temp 12.0 (Celsius)
 setstate x 13.66 0.0 30 13.62 15.09 -0.2 2.8
-setstate x 2007-09-02 10:06:47 Is 0.0
-setstate x 2007-09-02 10:06:47 Temp 30
-setstate x 2007-09-02 10:06:47 Vs 13.66
-setstate x 2007-09-02 10:06:47 maxI 2.8
-setstate x 2007-09-02 10:06:47 maxV 15.09
-setstate x 2007-09-02 10:06:47 minI -0.2
-setstate x 2007-09-02 10:06:47 minV 13.62
+setstate x 2007-09-13 09:10:23 Is 0.0
+setstate x 2007-09-13 09:10:23 Temp 30
+setstate x 2007-09-13 09:10:23 Vs 13.66
+setstate x 2007-09-13 09:10:23 maxI 2.8
+setstate x 2007-09-13 09:10:23 maxV 15.09
+setstate x 2007-09-13 09:10:23 minI -0.2
+setstate x 2007-09-13 09:10:23 minV 13.62
